--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+  box-shadow: 5px 10px 18px #888888;
 }
 
 .buttons {
@@ -48,6 +49,7 @@ body {
   border-radius: 5px;
   margin-bottom: 5px;
   padding-top: 10px;
+  overflow-x: scroll;
 }
 
 #operations-container {
